added profile page and logout

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -51,11 +51,11 @@
                           href="#/app/about">
                     <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
                 </ion-item>
-                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'badges' }"
-                          ng-click="changeClassToActive('badges')"
+                <ion-item class="menu-item" ng-class="{ 'menu--item-active': active === 'profile' }"
+                          ng-click="changeClassToActive('profile')"
                           menu-close
-                          href="#/app/badgeView">
-                    <i class="menu-item__icon menu-item__icon--badge ion-ribbon-b"></i>Badges
+                          href="#/app/profile">
+                    <i class="menu-item__icon menu-item__icon--badge ion-ios-person-outline"></i>Profile
                 </ion-item>
 
             </ion-list>
