Hid the bar code stuffy for the release

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -22,7 +22,7 @@
             </div>
         </ion-item>
 
-        <ion-item>
+        <!--<ion-item>
             <div class="profile-icon">
                 <i class="ion-ios-barcode-outline"></i>
             </div>
@@ -33,7 +33,7 @@
                 <img src="{{ getBarcode() }}" alt="barcode" />
             </div>
 
-        </ion-item>
+        </ion-item>-->
 
         <ion-item ng-click="logOut()">
             <div class="profile-icon">
