--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -31,6 +31,7 @@
                         <p>
                             <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
                         </p>
+                        <a href="tel:+37253680127">+37253680127</a>
                     </div>
 
                     <div class="padding-div text-center">
@@ -78,6 +79,7 @@
                 <p class="contacts__person-title">Equity Officer</p>
                 <p>
                     <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                    <a href="tel:+37253680127">+37253680127</a>
                 </p>
             </div>
         </div>
@@ -90,6 +92,7 @@
                 <p class="contacts__person-title">Equity Officer</p>
                 <p>
                     <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                    <a href="tel:+37253680127">+37253680127</a>
                 </p>
             </div>
         </div>
@@ -102,6 +105,7 @@
                 <p class="contacts__person-title">Equity Officer</p>
                 <p>
                     <a href="mailto:equity.tallinneudc@debate.ee">equity.tallinneudc@debate.ee</a>
+                    <a href="tel:+37253680127">+37253680127</a>
                 </p>
             </div>
         </div>
