--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -15,16 +15,22 @@
                         <div class="contacts-mail-phone--container">
                             <a href="mailto:info.tallinneudc@debate.ee"><i
                                     class="contacts--icon ion-ios-email-outline"></i></a>
-                            <a href="tel:+37259051786"><i class="contacts--icon ion-ios-telephone-outline"></i></a>
+                            <a href="tel:+37253755836"><i class="contacts--icon ion-ios-telephone-outline"></i></a>
                         </div>
                     </div>
+                    <div class="padding-div text-center">
+                        <h4>Emergency line</h4>
+                        <p>
+                            <a href="tel:+37253755836">+37253755836</a>
+                        </p>
+                    </div>
+
                     <div class="padding-div text-center">
                         <h4>Registration information</h4>
                         <p>
                             <a href="mailto:info.tallinneudc@debate.ee">info.tallinneudc@debate.ee</a>
                         </p>
                     </div>
-
 
                     <div class="padding-div text-center">
                         <h4>Equity team</h4>
